--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Faktury</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/fakury_favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
   <meta name="description" content="An exclusive streetwear brand that can be worn in the Metaverse and IRL."/>
@@ -69,5 +69,6 @@
         offset: 10,
     });
 </script>
+<!-- <script src="https://js.stripe.com/v3/"></script> -->
 </body>
 </html>
