uncomment stripe script in index.html file

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
 </div>
   <app-root></app-root>
 
+  
+<script src="https://js.stripe.com/v3/"></script>
   <!-- Call on All Page -->
 <script src="./assets/js/vendors/a-jquery.js"></script>
 <script src="./assets/js/vendors/popper.min.js"></script>
@@ -69,6 +71,5 @@
         offset: 10,
     });
 </script>
-<!-- <script src="https://js.stripe.com/v3/"></script> -->
 </body>
 </html>
