--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
 
   
 <script src="https://js.stripe.com/v3/"></script>
+<script async src="https://tally.so/widgets/embed.js"></script>
   <!-- Call on All Page -->
 <script src="./assets/js/vendors/a-jquery.js"></script>
 <script src="./assets/js/vendors/popper.min.js"></script>
